--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="header-wrapper-1">
-                        <a href="index-2.html" class="logo-area">
+                        <a href="index.html" class="logo-area">
                             <img src="assets/images/logo/logo.png" alt="logo" class="header_logo">
                         </a>
                         <div class="nav-area">
@@ -405,8 +405,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="header-wrapper-1">
-                        <a href="index-2.html" class="logo-area">
-                            <img src="assets/images/logo/logo-1.svg" alt="logo">
+                        <a href="index.html" class="logo-area">
+                            <!-- <img src="assets/images/logo/logo-1.svg" alt="logo"> -->
+                             <img src="assets/images/logo/logo.png" alt="logo" class="sticky_header_logo">
                         </a>
                         <div class="nav-area">
                             <nav>
