--- a/index.html
+++ b/index.html
@@ -1598,7 +1598,7 @@
                         </div>
                         <div class="single">
                             <label for="phone">Phone</label>
-                            <input type="text" id="phone" name="phone" placeholder="+1 (555) 000-0000">
+                            <input type="text" id="phone" name="phone" placeholder="+91 00000-00000">
                         </div>
                         <div class="single">
                             <label for="message">Message</label>
