--- a/security_surveillance_solutions.html
+++ b/security_surveillance_solutions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Power Tech.">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/favicon.png">
     <title>Power Tech</title>
     <link rel="stylesheet preload" href="assets/css/vendor/bootstrap.min.css" as="style" media="print"
         onload="this.media='all'">
