--- a/index.html
+++ b/index.html
@@ -818,19 +818,18 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-0 mt--70">
+            <div class="row g-0 mt--70  justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="single-solution-style-one border-left">
+                    <div class="service_home_card single-solution-style-one border-left border-bottom-1">
                         <div class="right-draw">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/01.png" alt="icons">
                         </div>
                         <div class="icon">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/01.svg" alt="service">
                         </div>
-                        <h4 class="title">Fast and Reliable</h4>
+                        <h4 class="title">Wired & Wireless Networks</h4>
                         <p class="disc">
-                            Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page
-                            and in the loop.
+                           Complete Network Solutions for Modern Businesses
                         </p>
                         <a href="service-single.html" class="btn-arrow">
                             Service Details
@@ -839,17 +838,16 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="single-solution-style-one">
+                    <div class="service_home_card single-solution-style-one border-bottom-1">
                         <div class="right-draw">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/01.png" alt="icons">
                         </div>
                         <div class="icon">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/02.svg" alt="service">
                         </div>
-                        <h4 class="title">Discover Data Everywhere</h4>
+                        <h4 class="title">Network Security Solutions</h4>
                         <p class="disc">
-                            Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page
-                            and in the loop.
+                           Defend Your Network. Secure Your Business.
                         </p>
                         <a href="service-single.html" class="btn-arrow">
                             Service Details
@@ -858,17 +856,16 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="single-solution-style-one">
+                    <div class="service_home_card single-solution-style-one border-bottom-1">
                         <div class="right-draw">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/01.png" alt="icons">
                         </div>
                         <div class="icon">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/03.svg" alt="service">
                         </div>
-                        <h4 class="title">Enrich Data with Context</h4>
+                        <h4 class="title">Security Surveillance – Access Control & CCTV</h4>
                         <p class="disc">
-                            Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page
-                            and in the loop.
+                            Smarter Security for a Safer Workplace
                         </p>
                         <a href="service-single.html" class="btn-arrow">
                             Service Details
@@ -877,17 +874,16 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="single-solution-style-one border-left border-bottom-1">
+                    <div class="service_home_card single-solution-style-one border-left border-bottom-1">
                         <div class="right-draw">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/01.png" alt="icons">
                         </div>
                         <div class="icon">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/04.svg" alt="service">
                         </div>
-                        <h4 class="title">Risk Management</h4>
+                        <h4 class="title">Server and Network Enclosure Solutions</h4>
                         <p class="disc">
-                            Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page
-                            and in the loop.
+                            Protect. Organize. Perform.
                         </p>
                         <a href="service-single.html" class="btn-arrow">
                             Service Details
@@ -896,17 +892,16 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="single-solution-style-one border-bottom-1">
+                    <div class="service_home_card single-solution-style-one border-bottom-1">
                         <div class="right-draw">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/01.png" alt="icons">
                         </div>
                         <div class="icon">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/05.svg" alt="service">
                         </div>
-                        <h4 class="title">Privacy Compliance</h4>
+                        <h4 class="title">GeM Portal & Tender Bidding Solutions</h4>
                         <p class="disc">
-                            Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page
-                            and in the loop.
+                           Your Trusted Partner for GeM Success
                         </p>
                         <a href="service-single.html" class="btn-arrow">
                             Service Details
@@ -914,8 +909,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="single-solution-style-one border-bottom-1">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-12" style="display : none;">
+                    <div class="service_home_card single-solution-style-one border-bottom-1">
                         <div class="right-draw">
                             <img loading="lazy" rel="preload" src="assets/images/service/icons/01.png" alt="icons">
                         </div>
