Index Footer Updated

--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
     <!-- large video area end -->
 
     <!-- solution expertiece -->
-    <div class="solution-expertice-area rts-section-gap bg-solution">
+    <div class="solution-expertice-area rts-section-gap bg-solution" id="all_services">
         <div class="top-left wow slideInLeft">
             <img loading="lazy" rel="preload" src="assets/images/service/icons/02.png" alt="service">
         </div>
@@ -1592,30 +1592,28 @@
     <div class="rts-footer-area rts-section-gapTop pb--80">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-md-12">
+                <div class="col-lg-4 col-md-12">
                     <div class="logo-area">
                         <a href="index-2.html" class="logo">
                             <img src="assets/images/logo/logo.png" alt="logo">
                         </a>
                         <p class="disc">
-                            Luminous is a leading IT solutions company that provides innovative technology services to
-                            businesses of all sizes.
+                            We have developed a powerful IT solutions ecosystem designed to accelerate growth, streamline operations, and transform the way businesses adapt to the digital landscape.  
                         </p>
                     </div>
 
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-8">
                     <div class="row g-5">
-                        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                        <div class="col-lg-5 col-md-6 col-sm-6 col-12">
                             <div class="single-nav-area-footer">
                                 <p class="parent">Services</p>
                                 <ul>
-                                    <li><a href="technologies-service.html">Technologies</a></li>
-                                    <li><a href="ai-learning-service.html">Ai Learning</a></li>
-                                    <li><a href="it-strategies.html">IT Strategies</a></li>
-                                    <li><a href="it-consulting-service.html">It Consulting</a></li>
-                                    <li><a href="management-service.html">Management</a></li>
-                                    <li><a href="service-single.html">Cloud Migration</a></li>
+                                    <li><a href="./wireless_and_wireless_network.html">Wired & Wireless Networks</a></li>
+                                    <li><a href="./network_security_solutions.html">Network Security Solutions</a></li>
+                                    <li><a href="./security_surveillance_solutions.html">Security Surveillance Solutions</a></li>
+                                    <li><a href="./Server_and_Network_Enclosure_Solutions.html">Server and Network Enclosure Solutions</a></li>
+                                    <li><a href="./gem_portal_and_tender_bidding_solutions.html">GeM Portal & Tender Bidding Solutions</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1623,18 +1621,16 @@
                             <div class="single-nav-area-footer">
                                 <p class="parent">Company</p>
                                 <ul>
-                                    <li><a href="about.html">About us</a></li>
-                                    <li><a href="career.html">Careers</a></li>
-                                    <li><a href="team.html">Our Team</a></li>
-                                    <li><a href="blog-grid.html">News</a></li>
-                                    <li><a href="partner.html">Partner</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="./index.html">Home</a></li>
+                                    <li><a href="./index.html#all_services">Our Services</a></li>
+                                    <li><a href="./index.html#about_us">About Us</a></li>
+                                    <li><a href="./index.html#contact_us">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-                            <div class="single-nav-area-footer">
-                                <p class="parent">Industrys</p>
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+                            <!-- <div class="single-nav-area-footer">
+                                <p class="parent">Industries</p>
                                 <ul>
                                     <li><a href="construction-industry.html">Construction</a></li>
                                     <li><a href="healthcare-industry.html">Healthcare</a></li>
@@ -1643,20 +1639,7 @@
                                     <li><a href="logistic-industry.html">Logistic</a></li>
                                     <li><a href="travel-industry.html">Travel Industry</a></li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-                            <div class="single-nav-area-footer">
-                                <p class="parent">Legal</p>
-                                <ul>
-                                    <li><a href="terms-of-use.html">Terms</a></li>
-                                    <li><a href="privacy-policy.html">Privacy</a></li>
-                                    <li><a href="cookies-policy.html">Cookies</a></li>
-                                    <li><a href="faq.html">Faq's</a></li>
-                                    <li><a href="free-consultation.html">Consultation</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
