--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,7 @@
                 <div class="col-lg-12">
                     <div class="google-map-wrapper">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d25175.2934750702!2d85.81495658001629!3d20.28661313019811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1750579991081!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3742.122997827669!2d85.84537887469529!3d20.295175412571062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1909f7e80cffff%3A0xc11f93b36c916fd0!2sPOWERTECH%20ENTERPRISES!5e0!3m2!1sen!2sin!4v1751817046556!5m2!1sen!2sin"
                             width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
@@ -1589,7 +1589,7 @@
     <!-- rts cta area end -->
 
     <!-- rts footer area start -->
-    <div class="rts-footer-area rts-section-gapTop pb--80">
+    <div class="rts-footer-area rts-section-gapTop pb--50">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-12">
@@ -1629,17 +1629,14 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                            <!-- <div class="single-nav-area-footer">
-                                <p class="parent">Industries</p>
-                                <ul>
-                                    <li><a href="construction-industry.html">Construction</a></li>
-                                    <li><a href="healthcare-industry.html">Healthcare</a></li>
-                                    <li><a href="ecommerce-industry.html">Ecommerce</a></li>
-                                    <li><a href="fintech-industry.html">Fintech</a></li>
-                                    <li><a href="logistic-industry.html">Logistic</a></li>
-                                    <li><a href="travel-industry.html">Travel Industry</a></li>
+                            <div class="single-nav-area-footer">
+                                <p class="parent">Contact Us</p>
+                                <ul class="custom-contact-list">
+                                    <li><i class="bi bi-geo-alt-fill"></i><a href="https://maps.app.goo.gl/g4VjHWwWsJcFHuQr9" target="_blank">A 64, Saheed Nagar, Bhubaneswar, Odisha, 751007</a></li>
+                                    <li><i class="bi bi-telephone-fill"></i><a href="tel:+919778578870">+91 97785 78870</a></li>
+                                    <li><i class="bi bi-envelope-fill"></i><a href="mailto:power_tech2016@outlook.com" target="_blank">power_tech2016@outlook.com</a></li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -1654,7 +1651,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="copyright-wrapper">
-                        <p>© 2024 Power Tech. All rights reserved.</p>
+                        <p>© 2025 Powertech Enterprises. All rights reserved.</p>
                         <div class="social-copyright-area">
                             <ul>
                                 <li aria-label="Visit our Facebook page"><a href="#"><i
@@ -1678,8 +1675,7 @@
 
     <!-- pre loader area start -->
     <div class="loader-wrapper">
-        <div class="loader">
-        </div>
+        <div class="loader"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
     </div>
@@ -1715,16 +1711,11 @@
 
             <div class="rts-social-border-area right-sidebar mt--80">
                 <ul>
-                    <li><a href="#" aria-label="social link" data-description="social"><i
-                                class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#" aria-label="social link" data-description="social"><i
-                                class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#" aria-label="social link" data-description="social"><i
-                                class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li><a href="#" aria-label="social link" data-description="social"><i
-                                class="fa-brands fa-pinterest"></i></a></li>
-                    <li><a href="#" aria-label="social link" data-description="social"><i
-                                class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href="#" aria-label="social link" data-description="social"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#" aria-label="social link" data-description="social"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#" aria-label="social link" data-description="social"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="#" aria-label="social link" data-description="social"><i class="fa-brands fa-pinterest"></i></a></li>
+                    <li><a href="#" aria-label="social link" data-description="social"><i class="fa-brands fa-youtube"></i></a></li>
                 </ul>
             </div>
         </div>
